<resources>
    <string name="app_name">Online OPD Application</string>
    <string name="welcome">Welcome</string>
    <string name="on_board_message_one">Now OPD Appointment Process Made Easy</string>
    <string name="on_board_message_two">Why Stand In Line ? When you have Online OPD application ?</string>
    <string name="on_board_message_three">Now Find Hospitals, Doctors And Latest Health News.\nAll In one place</string>
    <string name="login">Login</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="or">OR</string>
    <string name="signIn">Sign In</string>
    <string name="doNotHaveAccount">Don\'t have account yet?</string>
    <string name="createAccount">Create Account</string>
    <string name="fullname">Full Name</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="phoneNumber">Mobile Number</string>
    <string name="youWillGetOTP">Note : You will get an OTP to verify this mobile number</string>
    <string name="signUp">Sign Up</string>
    <string name="whatDoYouWantToDoToday">What are you looking for today?</string>
    <string name="bookAppointmentNow">Book Appointment Now</string>
    <string name="bookTeleConsultation">Book Teleconsultation Appointment</string>
    <string name="search_hospitals">Browse Hospitals</string>
    <string name="checkLabReports">Check Lab Reports</string>
    <string name="select_patient">Select The Patient</string>
    <string name="specialityChoosen">"Speciality Chosen : "</string>
    <string name="next">"Next"</string>
    <string name="select_appointment_date">"Select Appointment Date : "</string>
    <string name="selectedDate">"Selected Date : "</string>
    <string name="please_enter_full_name">Please enter full name</string>
    <string name="please_enter_correct_email">Please Enter Valid E-mail</string>
    <string name="please_enter_valid_mobile_number">Please Enter Valid Mobile Number</string>
    <string name="please_make_sure_password_is_valid">Password must contain 6 or more characters</string>
    <string name="password_not_matching">Passwords are not matching. Please make sure both fields have same content</string>
    <string name="loading_please_wait">Please Wait…</string>
    <string name="loading">Loading…</string>
    <string name="authenticating_user">Authenticating User....</string>
    <string name="email_not_exist">There is no email registered with this account. Please check email or register before continuing</string>
    <string name="password_is_wrong_or_use_other_login">The entered password is either wrong or you might have used another method while registering kindly use that method.</string>
    <string name="unable_to_login_at_the_moment">Unable to login at the moment. Please try again later</string>
    <string name="email_exists">This email is already in use by another account. Kindly login if you already created account</string>
    <string name="something_went_wrong_try_again_later">Something went wrong. Try again later</string>
    <string name="creatingAccount">Creating Account…</string>
    <string name="almost_done">Almost done…</string>

    <string name="connect_phone_number">"Connect your account with your phone number, in order to secure your account and to get verified.\n\n An OTP will be sent to your device for authentication "</string>
    <string name="send_otp_and_verify"><![CDATA[Send OTP & Verify]]></string>
    <string name="otp_sent_confirmation">An OTP has been sent to your phone number \n+91%1s \n\nThe system will try to auto detect the sms. You can manually enter the OTP if not detected automatically. </string>
    <string name="confirmOTP">Confirm OTP</string>
    <string name="invalid_otp">Invalid OTP Entered. Please enter correct OTP</string>
    <string name="mobile">"Mobile Number "</string>
    <string name="invalid_phone_number">Invalid phone number entered</string>
    <string name="verify_mobile_number">Verify Mobile Number</string>
    <string name="getting_google_accounts">Getting Google Accounts</string>
    <string name="familyMemberName">Member Name</string>
    <string name="age">Member Age</string>
    <string name="relation">Relation</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="add_member">Add Member</string>
    <string name="addMember">Add Member</string>
    <string name="please_enter_valid_age">Please enter valid age</string>
    <string name="adding_member">Adding member</string>
    <string name="member_added">Member added successfully</string>
    <string name="adhar_required">Note : Aadhaar ID number is required to uniquely identify users across system.</string>
    <string name="adhar_number">Aadhaar Id Number</string>
    <string name="enter_correct_adhar_number">Please enter correct aadhar number</string>
    <string name="please_select_gender">Please select gender</string>
    <string name="please_select_relation_type">Please select relation type</string>
    <string name="yours">"Your "</string>
    <string name="onlyAge">"Age : "</string>
    <string name="patient_selected">Patient Selected :</string>
    <string name="select_speciality_and_doctor">"Select speciality "</string>
    <string name="registrationMessage">Want to get your self registered as Doctor? </string>
    <string name="registrationMessage2">If you are interested in registering your self as doctor. Kindly upload your resume with valid documents. We will get back to you.
    </string>
    <string name="note_for_registerants">Note : You will receive updates about your application to this email. Make sure you provide valid email</string>
    <string name="choose_resume_file">Choose resume file</string>
    <string name="upload_resume">Upload Resume</string>
    <string name="please_enter_correct_email_and_choose_resume">Please make sure you have entered correct email. And chosen a resume pdf</string>
    <string name="uploading_details">Uploading Details</string>
    <string name="thankYou">Thank you</string>
    <string name="responseRecorded">Your response recorded. We will get back to you in 7-15 days</string>
    <string name="organization_employee_login">Login As Doctor</string>
    <string name="role">Select Role</string>
    <string name="pendingApprovals">See Pending Approvals</string>
    <string name="news">News</string>
    <string name="add_news">Add News</string>
    <string name="reject">Reject</string>
    <string name="approve">Approve</string>
    <string name="see_resume">See Resume</string>
    <string name="check_appointments">Check Appointments</string>
    <string name="manage_departments">Manage Departments</string>
    <string name="select_department">Select Department</string>
    <string name="choose_speciality">Choose speciality</string>
    <string name="specialities">"Specialities "</string>
    <string name="selected_department_and_speciality">"Selected department and speciality "</string>
    <string name="department">"Department "</string>
    <string name="choose_date">Choose date</string>
    <string name="debit_card_payment">Debit Card Payment</string>
    <string name="wallet_payment">Wallet Payment</string>
    <string name="upi">UPI</string>
    <string name="google_pay">Google Pay</string>
    <string name="phone_pe">Phone Pe</string>
    <string name="paytm">PayTM</string>
    <string name="select_doctor">Select Doctor</string>
    <string name="doctor_selected">"Doctor selected "</string>
    <string name="pay_and_book">Pay Online</string>
    <string name="justBook">Pay At Clinic</string>
    <string name="booking_note">You can pay the appointment fees now or you can also pay when you visit hospital.</string>
    <string name="confirm_booking">Confirm appointment</string>
    <string name="choose_payment_method">Choose payment method</string>
    <string name="registration_successfull">Your appointment is successfully done. You can manger your appointments in the Manage Appointments Section</string>
    <string name="booking_appointment">Booking appointment please wait</string>
    <string name="upcoming_appointments">Upcoming appointments</string>
    <string name="registerAsDoctor">Register As Doctor</string>
    <string name="getting_appointments">Getting Appointments</string>
    <string name="noAppointmentMade">You have\'t made any appointment yet.</string>
    <string name="manage_appointments">Manage Appointments</string>
    <string name="cancel_appointment">Cancel Appointment</string>
    <string name="reschedule">Reschedule Appointment</string>
    <string name="are_you_sure">Do you really want to cancel this appointment ? Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancelling_please_wait">Cancelling appointment please wait</string>
    <string name="cancelled">Cancelled your appointment succesfully</string>
    <string name="active">Status : Active</string>
    <string name="cancelled2">Status : Cancelled</string>
    <string name="rescheduling">Rescheduling ... Please wait</string>
    <string name="rescheduled">Rescheduled successfully</string>
    <string name="request_consultation">Request Online Consultation</string>
    <string name="online_consulation_note">Note : The doctors will clear your doubts or give you suggestions via online. Click below to confirm. The doctor will contact you as soon as possible</string>
    <string name="online_successfull_message">Your request has been sent to the doctor. You will get the reply back from doctor as soon as possible</string>
    <string name="feature_dimen">12sp</string>
    <string name="comment">Write your review here</string>
    <string name="search_doctors">Search Doctors</string>
    <string name="emergency">Call Nearest Hospital</string>

</resources>