<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/standard_padding"
    android:gravity="center_horizontal"
    android:padding="@dimen/standard_padding"
    app:cardElevation="@dimen/standard_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/standard_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/standard_padding"
            android:text="@string/confirm_booking"
            android:textAppearance="@style/TextAppearance.Custom.Body1"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/standard_padding"
            android:text="@string/booking_note"
            android:textAppearance="@style/TextAppearance.Custom.Body1"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/payAndBook"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/standard_padding"
                android:layout_weight="1"
                android:text="@string/pay_and_book"
                android:textColor="@color/colorPrimary"
                app:backgroundTint="@color/white"
                app:strokeColor="@color/colorPrimary"
                app:strokeWidth="2dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/justBook"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/standard_padding"
                android:layout_weight="1"
                android:text="@string/justBook"
                app:backgroundTint="@color/colorPrimary" />

        </LinearLayout>

    </LinearLayout>


</com.google.android.material.card.MaterialCardView>