<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".activities.RegisterAsDoctor">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:lottie_rawRes="@raw/waiting_doctors_anim" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/choose_resume_file"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/large_padding"
        app:cardCornerRadius="@dimen/standard_padding"
        app:cardElevation="@dimen/standard_padding"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/standard_padding">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/standard_padding"
                android:text="@string/registrationMessage"
                android:textAppearance="@style/TextAppearance.Custom.Headline5"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"
                android:padding="@dimen/standard_padding"
                android:text="@string/registrationMessage"
                android:textAppearance="@style/TextAppearance.Custom.Body1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/standard_padding"
                android:text="@string/registrationMessage2"
                android:textAppearance="@style/TextAppearance.Custom.Body1" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/large_padding"
                android:hint="@string/email"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:helperText="@string/note_for_registerants"
                app:hintTextColor="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="@dimen/large_padding"
                app:strokeColor="@color/black"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:text="@string/choose_resume_file"
                        android:textAppearance="@style/TextAppearance.Custom.Body1" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="@dimen/large_padding"
                android:text="@string/upload_resume" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>