<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/standard_padding"
    android:gravity="center_horizontal"
    android:padding="@dimen/standard_padding"
    app:cardElevation="@dimen/standard_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/standard_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/standard_padding"
            android:text="@string/bookTeleConsultation"
            android:textAppearance="@style/TextAppearance.Custom.Body1"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/standard_padding"
            android:text="@string/online_consulation_note"
            android:textAppearance="@style/TextAppearance.Custom.Body1"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/requestConsultation"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/standard_padding"
                android:layout_weight="2"
                android:text="@string/request_consultation"
                app:backgroundTint="@color/colorPrimary" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>