<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.AddFamilyMember">

    <include layout="@layout/toolbar_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbarCard"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/standard_padding"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/standard_padding"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                app:cardElevation="@dimen/standard_padding"
                android:layout_marginLeft="@dimen/standard_padding"
                android:layout_marginRight="@dimen/standard_padding"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/standard_padding"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/memberName"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/familyMemberName"
                        app:boxBackgroundColor="@color/white"
                        android:layout_margin="@dimen/standard_padding"
                        app:boxCornerRadiusTopEnd="8dp"
                        app:boxCornerRadiusTopStart="8dp"
                        app:hintTextColor="@color/colorPrimary">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/adharId"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/adhar_number"
                        app:boxBackgroundColor="@color/white"
                        android:layout_margin="@dimen/standard_padding"
                        app:boxCornerRadiusTopEnd="8dp"
                        app:helperText="@string/adhar_required"
                        app:boxCornerRadiusTopStart="8dp"
                        app:hintTextColor="@color/colorPrimary">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:maxLength="12"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/memberAge"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/age"
                        app:boxBackgroundColor="@color/white"
                        android:layout_margin="@dimen/standard_padding"
                        app:boxCornerRadiusTopEnd="8dp"
                        app:boxCornerRadiusTopStart="8dp"
                        app:hintTextColor="@color/colorPrimary">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/realtionBox"
                        android:layout_margin="@dimen/standard_padding"
                        android:hint="@string/relation">

                        <AutoCompleteTextView
                            android:id="@+id/relationType"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <View
                        android:layout_width="match_parent"
                        android:background="@color/colorPrimaryLight"
                        android:layout_margin="@dimen/standard_padding"
                        android:layout_height="1dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:text="@string/gender"
                        android:textAppearance="@style/TextAppearance.Custom.Subtitle2"
                        android:paddingTop="@dimen/standard_padding"
                        android:paddingLeft="@dimen/large_padding"
                        android:layout_height="wrap_content"/>

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:padding="@dimen/standard_padding"
                        android:id="@+id/genderGroup"
                        android:orientation="horizontal"
                        android:layout_marginLeft="@dimen/standard_padding"
                        android:layout_height="wrap_content">

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:layout_width="wrap_content"
                            android:text="@string/male"
                            android:layout_height="wrap_content"/>

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:layout_width="wrap_content"
                            android:text="@string/female"
                            android:layout_marginLeft="@dimen/large_padding"
                            android:layout_height="wrap_content"/>

                    </RadioGroup>

                    <TextView
                        android:layout_width="match_parent"
                        android:text="@string/please_select_gender"
                        android:id="@+id/selectGender"
                        android:visibility="gone"
                        android:paddingLeft="@dimen/large_padding"
                        android:paddingRight="@dimen/large_padding"
                        android:textAppearance="@style/TextAppearance.Custom.Subtitle2"
                        android:textColor="@color/errorColor"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/add_member_card"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:fitsSystemWindows="true"
                android:focusable="true"
                android:focusedByDefault="true"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardElevation="2sp"
                app:strokeColor="@color/colorPrimary"
                app:strokeWidth="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/addMember"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="@dimen/standard_padding"
                        android:text="@string/add_member"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textAppearance="@style/TextAppearance.Custom.Subtitle2"
                        android:textStyle="bold"
                        android:visibility="visible" />

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/addMemberLoading"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:scaleType="fitCenter"
                        android:visibility="gone"
                        app:lottie_autoPlay="true"
                        app:lottie_colorFilter="@color/white"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/loading"
                        app:lottie_speed="1.5" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>