<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/standard_padding"
    app:cardCornerRadius="@dimen/standard_padding"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_padding"
        android:orientation="vertical"
        android:padding="@dimen/standard_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="@string/are_you_sure"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_padding"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/yes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/standard_padding"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center"
                android:padding="@dimen/standard_padding"
                android:text="@string/yes"
                android:textColor="@color/white"
                app:strokeColor="@color/colorPrimary"
                app:strokeWidth="2dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/standard_padding"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:padding="@dimen/standard_padding"
                android:text="@string/no"
                android:textColor="@color/colorPrimary"
                app:strokeColor="@color/colorPrimary"
                app:strokeWidth="2dp" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>